--- a/demos/index.html
+++ b/demos/index.html
@@ -1,6 +1,6 @@
 <DOCTYPE html>
 <head>
-  <title>DRC Starter Kit</title>
+  <title>React flowchart demos</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
